# Factuality-and-Prompting-Strategies-for-Text-Summarization

./: CITATION.cff  README.md  REPRODUCIBILITY.md  llama-vicuna-orca.ipynb  llm-aisuite-text-summarization.ipynb  llm-evaluation.ipynb  pyproject.toml  requirements.txt  roberta_stopwords.txt
LongDocFACTScore/: Correlations.ipynb  merger.ipynb  run_example.py
LongDocFACTScore/evaluation_scripts/: requirements.txt  run_evaluation.py  run_evaluation_AggreFACT.py  run_evaluation_BBC.py  run_evaluation_Dialog.py  run_evaluation_duc2004.py
LongDocFACTScore/evaluation_scripts/utils/: correlations.py  metrics.py  preprocess.py
LongDocFACTScore/src/longdocfactscore/: ldfacts.py
factscore/: abstain_detection.py  atomic_facts.py  clm.py  download_data.py  fact_correction.py  factscorer.py  factscorer_spark.py  lm.py  npm.py  openai_lm.py  preprocess.py  preprocess_acl.py  preprocess_cnndm.py  preprocess_duc2004.py  preprocess_gendata.py  preprocess_longsciverify.py  preprocessing.py  retrieval.py  utils.py
tests/: test_lm.py  test_preprocessing.py  test_repository_hygiene.py
